user entity created

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="./css/login-signup.css"/>
     <link rel="stylesheet" type="text/css" href="./css/signup.css"/>
-    <title>Login</title>
+    <title>Signup</title>
   </head>
   <body>
 <canvas class= "background"></canvas>
