--- a/views/index.hbs
+++ b/views/index.hbs
@@ -110,5 +110,6 @@
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/sockets.js"></script>
+    <script src="./js/searching.js"></script>
   </body>
 </html>
