--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="./css/login-signup.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/loginSignUp.css"/>
     <title>Login</title>
   </head>
   <body>
@@ -35,7 +35,6 @@
     </div>
 
     <script src = "https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.3/particles.min.js"></script>
-    <script src = "./js/create-particles.js"></script>
      {{#if error_message}}
         <link href="./css/toast.min.css" rel="stylesheet">
         <script src="./js/toast.min.js"></script>
@@ -49,5 +48,15 @@
             });
         </script>
     {{/if}}
+    <script>
+    window.onload = function() {
+        Particles.init({
+            selector: '.background',
+            color: '#ffffff',
+            connectParticles: 'true',
+            maxParticles: 50
+        });
+    };
+</script>
 </body>
 </html>
