--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="./css/login-signup.css"/>
+    <link rel="stylesheet" type="text/css" href="./css/loginSignUp.css"/>
     <link rel="stylesheet" type="text/css" href="./css/signup.css"/>
     <title>Signup</title>
   </head>
@@ -55,5 +55,15 @@
             });
         </script>
     {{/if}}
+        <script>
+    window.onload = function() {
+        Particles.init({
+            selector: '.background',
+            color: '#ffffff',
+            connectParticles: 'true',
+            maxParticles: 50
+        });
+    };
+</script>
 </body>
 </html>
