--- a/views/index.hbs
+++ b/views/index.hbs
@@ -41,7 +41,7 @@
 
 
     <div class="prf changePhoto">
-        <form class="prf" method="post" enctype="multipart/form-data" action="/changeAvatar">
+        <form class="prf" method="post" enctype="multipart/form-data" action="user/changeAvatar">
             <input class="prf" type="file" name="avatar" accept=".jpeg,.jpg" style="display: block;">
             <input class="prf" type="submit" value="Submit">
         </form>
