--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>RFeim</title>
     <link rel="stylesheet" type="text/css" href="./css/messenger.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./img/system/title_logo.png" />
   </head>
   <body>
  
@@ -43,7 +44,7 @@
     <div class="prf changePhoto">
         <form class="prf" method="post" enctype="multipart/form-data" action="user/changeAvatar">
             <input class="prf" type="file" name="avatar" accept=".jpeg,.jpg" style="display: block;">
-            <input class="prf" type="submit" value="Submit">
+            <input class="prf" type="submit" value="Изменить">
         </form>
     </div>
 
