--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="./css/loginSignUp.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./img/system/title_logo.png" />
     <title>Login</title>
   </head>
   <body>
