--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="./css/loginSignUp.css"/>
     <link rel="stylesheet" type="text/css" href="./css/signup.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./img/system/title_logo.png" />
     <title>Signup</title>
   </head>
   <body>
